@@ -1,6 +1,7 @@
 package com.food.api.controller;
 
 import java.util.List;
+import java.util.Map;
 
 import javax.validation.Valid;
 
@@ -10,6 +11,7 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -25,6 +27,7 @@ import com.food.api.core.data.PageableTranslator;
 import com.food.api.model.PedidoModel;
 import com.food.api.model.PedidoResumoModel;
 import com.food.api.model.input.PedidoInput;
+import com.food.api.openapi.controller.PedidoControllerOpenApi;
 import com.food.domain.exception.EntidadeNaoEncontradaException;
 import com.food.domain.exception.NegocioException;
 import com.food.domain.model.Pedido;
@@ -33,11 +36,10 @@ import com.food.domain.model.filter.PedidoFilter;
 import com.food.domain.model.repository.PedidoRepository;
 import com.food.domain.service.EmissaoPedidoService;
 import com.food.infrastructure.repository.specs.PedidoSpecs;
-import com.google.common.collect.ImmutableMap;
 
 @RestController
-@RequestMapping(value = "/pedidos")
-public class PedidoController {
+@RequestMapping(path = "/pedidos", produces = MediaType.APPLICATION_JSON_VALUE)
+public class PedidoController implements PedidoControllerOpenApi {
 
 	@Autowired
 	private PedidoRepository pedidoRepository;
@@ -54,11 +56,13 @@ public class PedidoController {
 	@Autowired
 	private PedidoInputDisassembler pedidoInputDisassembler;
 
+	@Override
 	@GetMapping
 	public Page<PedidoResumoModel> pesquisar(PedidoFilter filtro, @PageableDefault(size = 10) Pageable pageable) {
+		pageable = traduzirPageable(pageable);
+
 		Page<Pedido> pedidosPage = pedidoRepository.findAll(PedidoSpecs.usandoFiltro(filtro), pageable);
 
-		pageable = traduzirPageable(pageable);
 		List<PedidoResumoModel> pedidosResumoModel = pedidoResumoModelAssembler
 				.toCollectionModel(pedidosPage.getContent());
 
@@ -68,6 +72,7 @@ public class PedidoController {
 		return pedidosResumoModelPage;
 	}
 
+	@Override
 	@PostMapping
 	@ResponseStatus(HttpStatus.CREATED)
 	public PedidoModel adicionar(@Valid @RequestBody PedidoInput pedidoInput) {
@@ -86,21 +91,19 @@ public class PedidoController {
 		}
 	}
 
+	@Override
 	@GetMapping("/{codigoPedido}")
 	public PedidoModel buscar(@PathVariable String codigoPedido) {
 		Pedido pedido = emissaoPedido.buscarOuFalhar(codigoPedido);
 
 		return pedidoModelAssembler.toModel(pedido);
 	}
-	
+
 	private Pageable traduzirPageable(Pageable apiPageable) {
-		var mapeamento = ImmutableMap.of(
-				"codigo", "codigo",
-				"restaurante.nome", "restaurante.nome",
-				"nomeCliente", "cliente.nome",
-				"valorTotal", "valorTotal"
-			);
-		
+		var mapeamento = Map.of("codigo", "codigo", "subtotal", "subtotal", "taxaFrete", "taxaFrete", "valorTotal",
+				"valorTotal", "dataCriacao", "dataCriacao", "restaurante.nome", "restaurante.nome", "restaurante.id",
+				"restaurante.id", "cliente.id", "cliente.id", "cliente.nome", "cliente.nome");
+
 		return PageableTranslator.translate(apiPageable, mapeamento);
 	}
 
